
  * Upgraded Selenium dependency to 2.16.1.  (andreastt)

  * Removed interface Utils.  (andreastt)

  * OperaUtils.getProduct() now returns OperaProduct instead of
    String.  (andreastt)

  * Removed OperaDriver.isJavascriptEnabled().  (andreastt)

  * Removed methods OperaDriver.key(), keyDown(), keyUp(),
    releaseKeys() and type().  (andreastt)


  [NEW FEATURES]

  * New interface OperaProfile for interacting with the profile for
    Opera.  You can for example modify or set new preferences on
    profile before Opera is started:

       OperaProfile profile = new OperaProfile();  // fresh profile
       profile.preferences().set("User Prefs",
                                 "Ignore Unrequested Popups", false);
       WebDriver driver = new OperaDriver(profile);

    You can also interact with existing profiles by passing in the
    directory to OperaProfile's constructor.

    (andreastt)

  * New interface OperaPreferences for managing preferences in
    preference files (like operaprefs.ini) and during runtime through
    Scope.

    Calls to preference may be done like this:

       driver.preferences().set("User Prefs",
                                "Ignore Unrequested Popups", false);

    OperaScopePreferences replaces OperaDriver.getPref() and
    OperaDriver.setPref() which are now deprecated.

    (andreastt)

  [ENHANCEMENTS]

  * Reduced much code duplication.  (andreastt)

  * Default product for OperaRunnerSettings is now DESKTOP.
    (andreastt)

  * Upgraded WebDriver atoms.  (andreastt)

  * Upgraded OperaWebElement.click() to use new atoms for selecting an
    OPTION element.  (andreastt)

  [BUG FIXES]

  * Asserting if element is stale on OperaWebElement.getText(),
    getLocation(), getTagName() and clear().  (andreastt)

  * If a page load times out we now return control of the browser _in
    all_ situations.  (andreastt)

  * Reverted check for setLastModified on newly copied launcher as it